# lidar-clouds

./: .gitignore  README.md  docker-compose.yaml  env_example  pcd2bin.py
lidar_api/: Dockerfile  pyproject.toml
lidar_api/scripts/: build.sh  run.sh
lidar_api/src/: main.py  services.py
lidar_detector/: Dockerfile  pyproject.toml
lidar_detector/scripts/: build.sh
lidar_detector/src/: main.py  pyproject.toml
lidar_detector/src/OpenPCDet/: run_full_pipeline.py
lidar_detector/src/OpenPCDet/tools/: demo.py
lidar_front/: .eslintignore  .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
lidar_front/src/app/: index.vue
lidar_front/src/app/providers/: registerComponents.ts
lidar_front/src/app/styles/: index.scss  normalize.scss
lidar_front/src/pages/: index.ts  index.vue
lidar_front/src/pages/pcd/: index.ts  index.vue
lidar_front/src/pages/pcd/ui/HelpButton/: HelpButton.vue  styles.scss
lidar_front/src/shared/ui/ui-badge/: index.ts  index.vue
lidar_front/src/shared/ui/ui-file-field/: index.ts  index.vue
lidar_front/src/shared/utils/time/: index.ts
ml_services/: README_ml.md  merge_npz_preds.py  pcd2ply.py  pcd2tiles.py  points.ply  remove_points_and_fill.py  test.ipynb  test2.ipynb  test2_fix.ipynb
nginx/: Dockerfile
ocr_configurations/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.py
ocr_configurations/ocr_configurations/: __init__.py  celery_config.py  celery_sender.py  config.py  logger.py
