[tool.poetry]
name = "lidar-cloud-api"
version = "0.1.0"
description = ""
authors = ["Николай Додатко <ndodatko@mind-set.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "0.115.11"
psycopg2-binary = "^2.9.9"
pydantic = "2.9.2"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
SQLAlchemy = "1.4.39"
uvicorn = "0.23.2"
alembic = "1.13.1"
celery = "5.4.0"
kombu = "5.5.4"
redis = "6.2.0"
aiohttp = "3.9.3"
aiofiles = "23.2.1"
requests = "2.31.0"
PyYAML = "6.0.2"

[tool.poetry.group.dev.dependencies]
isort = "5.12.0"
line_profiler = "4.1.3"
locust = "2.16.1"
pytest = "8.3.5"
pytest-asyncio = "1.0.0"
pytest-cov = "4.1.0"
httpx = "0.28.1"
reportlab = "4.4.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"