[tool.poetry]
name = "lidar-clouds"
version = "0.1.0"
description = ""
authors = ["meugeny <meugeny@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.4.7"
ipykernel = "^6.30.1"
open3d = "^0.19.0"
mmdet3d = "^1.4.0"
mmdet = "^3.3.0"
mmcv = "^2.2.0"
pyntcloud = "^0.3.1"
laspy = "^2.6.1"
pypcd = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
