[tool.poetry]
name = "lidar-clouds"
version = "0.1.0"
description = "PCD → тайлы → OpenPCDet → merge → постобработка"
authors = ["you <you@example.com>"]
readme = "README.md"
packages = [{include = "lidar_clouds"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

# Лёгкие зависимости, которые можно ставить через Poetry
# Back
pydantic = "2.9.2"
python-dotenv = "1.0.0"
celery = "5.4.0"
kombu = "5.5.4"
redis = "6.2.0"
SQLAlchemy = "1.4.36"
psycopg2-binary = "2.9.3"

# Model
numpy = "1.26.4"
scipy = "^1.11.4"
scikit-image = "0.21.0"
open3d = "^0.18.0"
matplotlib = "^3.8.0"
tqdm = "^4.66.0"
easydict = "^1.13"
tensorboardX = "^2.6"
pyyaml = "^6.0"
plotly = "^5.22.0"
blinker = "1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

